User can get his property's bookings

--- a/propertyRental/src/main/webapp/app/src/partials/addProperty/addProperty.html
+++ b/propertyRental/src/main/webapp/app/src/partials/addProperty/addProperty.html
@@ -149,7 +149,7 @@
 		  </div>
 		<div class="row">
 			<div class="pager">
-				<input type="submit" value="Add a property" class="btn btn-default" ng-disabled="propertyForm.$invalid" />
+				<input type="submit" value="Add a property" class="btn btn-success" ng-disabled="propertyForm.$invalid" />
 			</div>
 		</div>
 		
