--- a/propertyRental/src/main/webapp/app/src/partials/showMyProperties.html
+++ b/propertyRental/src/main/webapp/app/src/partials/showMyProperties.html
@@ -8,24 +8,44 @@
 			<button class='btn btn-default'>Edit property</button>
 		</a>
 		<button class='btn btn-default editPropButton' ng-click="showPropertyBookedDays(property.id,true)">
-			Show property booked days by months
+			Show number of booked days by months
 		</button>
 		<button class="btn btn-default" ng-click="showPropertyBookings(property.id)">
 			Show bookings
 		</button>
-		<select ng-options="year as year for year in property.availableYears" 
-			ng-if="selectedChartId == property.id" ng-model="$parent.$parent.selectedYear" ng-change="showPropertyBookedDays(property.id,false)"
-			ng-init="selectedYear = property.availableYears[property.availableYears.length-1]" 
-			class="form-control" name="propertyType"></select>				
-		<highchart ng-if="selectedChartId == property.id" config="chartConfig"></highchart>
-		<div class="row" ng-repeat="booking in propertyBookings" ng-if="selectedBookingsPropertyId == property.id">
+		<button class="btn btn-default" ng-click="showPropertyUnavailableDates(property.id)">
+			Show unavailable dates
+		</button>
+		<div class="row">
+			<my-datepicker class="col-md-8 paddingLeft" ng-if="selectedUnDatesPropertyId == property.id && currentUnDates.$resolved 
+			&& currentBookedDates.$resolved" 
+				update-un-dates="updateUnDates(dates)"
+				unavailable-dates="currentUnDates"
+				booked-dates="currentBookedDates"></my-datepicker>
+			<button class="btn btn-default" ng-if="selectedUnDatesPropertyId == property.id" ng-disabled="datesUpdated" 
+			ng-click="sendUnDates()">Save unavailable dates</button>
+		</div>
+		<div class="row paddingLeft" ng-if="selectedChartId == property.id">
+			<div class="col-md-1 formSection">Choose year</div>
+			<div class="col-md-2">
+				<select ng-options="year as year for year in property.availableYears" 
+					ng-if="selectedChartId == property.id" ng-model="$parent.$parent.selectedYear" ng-change="showPropertyBookedDays(property.id,false)"
+					ng-init="selectedYear = property.availableYears[property.availableYears.length-1]" 
+					class="form-control" name="propertyType"></select>		
+			</div>
+			<div class="col-md-12">
+				<highchart ng-if="selectedChartId == property.id" config="chartConfig"></highchart>
+			</div>
+		</div>
+		<div class="row paddingLeft" ng-repeat="booking in propertyBookings" ng-if="selectedBookingsPropertyId == property.id">
 			<div class="col-md-12 apartmentBlock">
 				<div class="apartmentTitle">Booked by - <a ui-sref='showUser({id:booking.userAccountId})'>{{booking.userAccountUsername}}</a></div>
 				<div class="bookingDates">{{booking.checkIn | date:"dd/MM/yyyy"}} - {{booking.checkOut | date:"dd/MM/yyyy"}}</div>
 				<div class="bookingPrice">{{booking.price}} EUR</div>
-				<div class="bookingStatus">Status: <i class="bookingCreated">{{booking.bookingStatus}}</i></div>
-				<select ng-options="status.id as status.name for status in bookingsStatuses" class="form-control" name="bookingStatus" ng-model="booking.bookingStatusId" required></select>
-				<button class="btn btn-default" ng-click="saveBooking($index)"> Save booking</button>
+				<show-booking-status ng-if="bookingsStatuses.$resolved" list="bookingsStatuses" current-status-id="booking.bookingStatusId"></show-booking-status>
+				<button class="btn btn-default" ng-disabled="booking.bookingStatusId == 2 || booking.bookingStatusId == 3" ng-click="setBookingStatusPayed(booking.bookingId)">Set status "payed and accepted"</button>
+				<button class="btn btn-default" ng-disabled="booking.bookingStatusId == 3" ng-click="cancelBooking(booking.bookingId)">Cancel booking</button>
+				<button class="btn btn-default" ng-if="lastActionBookingId == booking.bookingId" ng-click="annulLastAction(booking.bookingId)">Annul last action</button>
 			<hr/>
 		</div>
 		<hr/>
