--- a/propertyRental/src/main/webapp/app/src/partials/updateProperty.html
+++ b/propertyRental/src/main/webapp/app/src/partials/updateProperty.html
@@ -32,7 +32,7 @@
 		</div>
 		<div class="row">
 		<div class="form-group col-md-6">
-			<label for="bedCount">Bedroom count:</label>
+			<label for="bedCount">Bed count:</label>
 			<input type="number" class="form-control" name="bedCount" ng-model="property.bedCount" required>
 		</div>
 		</div>
