--- a/propertyRental/src/main/webapp/app/src/partials/addProperty/addProperty.html
+++ b/propertyRental/src/main/webapp/app/src/partials/addProperty/addProperty.html
@@ -52,7 +52,7 @@
 				<div class="col-md-6">
 					<label>Property facilities:</label>
 					<div ng-repeat="facility in propertyFacilities">
-						<br/><label class='facility'><input type="checkbox" name="facility" value="{{facility}}" check-list="property.propertyFacilities" /> <strong>{{facility.name}}</strong> - {{facility.description}}</label>
+						<label class='facility'><input type="checkbox" name="facility" value="{{facility}}" check-list="property.propertyFacilities" /> <strong>{{facility.name}}</strong> - {{facility.description}}</label>
 					</div>
 				</div>
 		</div>
