--- a/propertyRental/src/main/webapp/app/src/partials/home.html
+++ b/propertyRental/src/main/webapp/app/src/partials/home.html
@@ -16,29 +16,33 @@
 						<a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" href="#">
 						    <div class="input-group">
 						    	<input type="text" name="checkIn" placeholder="Check in" ng-model="query.checkIn" 
-								class="form-control" filter-date check-dates-match="{{query.checkOut}}" required />
+								class="form-control" filter-date check-dates-match="{{query.checkOut}}" />
 							    <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
 						    </div>
 						</a>
 						<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-						    <datetimepicker data-ng-model="query.checkIn" data-datetimepicker-config="{ minView:'day',dropdownSelector: '#dropdown1' }"/>
+						    <datetimepicker data-ng-model="query.checkIn" 
+						    data-before-render="beforeRender($view, $dates, $leftDate, $upDate, $rightDate)" 
+						    data-datetimepicker-config="{ minView:'day',dropdownSelector: '#dropdown1' }"/>
 						</ul>
 					</div>
 					<div class="col-md-2 col-xs-4 dropdown">
 						<a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" href="#">
 		    				<div class="input-group">
 		    					<input type="text" name="checkOut" placeholder="Check out" ng-model="query.checkOut" 
-								class="form-control" filter-date check-dates-match="{{query.checkIn}}" required/>
+								class="form-control" filter-date check-dates-match="{{query.checkIn}}"/>
 							    <span class="glyphicon glyphicon-calendar form-control-feedback"></span>
 						    </div>
 						</a>
 						<ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
-						    <datetimepicker data-ng-model="query.checkOut" data-datetimepicker-config="{ minView:'day',dropdownSelector: '#dropdown2' }"/>
+						    <datetimepicker data-ng-model="query.checkOut" 
+						    data-before-render="beforeRender($view, $dates, $leftDate, $upDate, $rightDate)" 
+						    data-datetimepicker-config="{ minView:'day',dropdownSelector: '#dropdown2' }"/>
 						</ul>
 					</div>
 					<div class="col-md-2 col-xs-4">
 						<input type="number" name="guestNumber" placeholder="Guest number" ng-model="query.guestNumber" 
-							class="form-control" min="0" required/>
+							class="form-control" min="0"/>
 					</div>
 					<div class="col-md-1 col-xs-12">
 						<input type="submit" value="Search" class="btn btn-default"/>
