--- a/propertyRental/src/main/webapp/app/src/partials/myProperties/showMyProperties.html
+++ b/propertyRental/src/main/webapp/app/src/partials/myProperties/showMyProperties.html
@@ -3,12 +3,13 @@
 		<div class="col-md-3">
 			<ul class="nav nav-pills nav-stacked">
 				<li class="nav-header">My properties:</li>
-				<li ng-repeat="property in properties" ui-sref-active="active">
-					<a ui-sref="showMyProperties.detail({propertyId:property.id})">
+				<li ng-repeat="property in properties" ng-class="{'active':selectedPropertyId == property.id}">
+					<a ui-sref="showMyProperties.detail.bookings({propertyId:property.id})">
 						{{property.title}}<br/>
 						<span class="smallInfo">{{property.city}}, {{property.administrativeArea}}, {{property.country}}</span>
 					</a>
 				</li>
+				<li class="nav-header" ng-if="!properties.length">None found</li>
 			</ul>
 		</div>
 		<div class="col-md-9">
