Project structure reorganization

--- a/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/details.html
+++ b/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/details.html
@@ -12,4 +12,5 @@
       <a ui-sref=".unDates">Unavailable dates</a>
     </li>
 </ul>
+<div class="row"><div class="col-md-12"><a ui-sref="showProperty({propertyId:currentProperty.id})" class="floatRightA">Move to property info</a></div></div>
 <div ui-view></div>
