Added template for header and footer

--- a/propertyRental/src/main/webapp/app/src/assets/css/styles.css
+++ b/propertyRental/src/main/webapp/app/src/assets/css/styles.css
@@ -226,3 +226,8 @@ For elements with both the ng-valid and ng-dirty classes
 .floatRightA{
 	float:right;
 }
+.footerText{
+	font-size:11px;
+	text-align:center;
+	color:#adbcbb;
+}
