--- a/propertyRental/src/main/webapp/app/src/modules/security/partials/login.html
+++ b/propertyRental/src/main/webapp/app/src/modules/security/partials/login.html
@@ -1,6 +1,6 @@
 <div class="container">
 	<h1>Please login</h1>
-	<form name="loginForm" ng-submit="loginForm.$valid && login()">
+	<form name="loginForm" id="loginForm" ng-submit="loginForm.$valid && login()">
 		<div class="form-group">
 			<label>Username:</label> <input type="text" ng-model="userAccount.username"
 				class="form-control" required />
