--- a/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/bookings.html
+++ b/propertyRental/src/main/webapp/app/src/modules/myProperties/partials/bookings.html
@@ -17,7 +17,7 @@
 	</div>
 	
 <div class="col-md-9">
-	<div class="row" ng-repeat="booking in propertyBookings | filter:showOnlyStatus | sortByYearBooking:showOnlyYear">
+	<div class="row" ng-repeat="booking in filteredBookings | startFrom:(currentPage - 1)*itemsPerPage | limitTo:itemsPerPage | orderBy:'-bookingId'">
 		<div class="col-md-12 apartmentBlock">
 			<div class="apartmentTitle">Booked by - <a ui-sref='conversations.chat({bookingId : booking.bookingId})'>{{booking.userAccountUsername}}</a></div>
 			<div class="bookingDates">{{booking.checkIn | date:"dd/MM/yyyy"}} - {{booking.checkOut | date:"dd/MM/yyyy"}}</div>
@@ -28,6 +28,16 @@
 			<button class="btn btn-default" ng-disabled="booking.bookingStatusId == 3" ng-click="cancelBooking(booking.bookingId)">Cancel booking</button>
 			<button class="btn btn-default" ng-if="lastActionBookingId == booking.bookingId" ng-click="annulLastAction(booking.bookingId)">Annul last action</button>
 			<hr/>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-2"></div>
+		<div class="col-md-8">
+			<pagination ng-if="propertyBookings.$resolved && propertyBookings.length" boundary-links="true" total-items="filteredBookings.length"
+                ng-model="$parent.currentPage" class="pagination-sm"
+                previous-text="&lsaquo;" next-text="&rsaquo;"
+                first-text="&laquo;" last-text="&raquo;"
+            	items-per-page="itemsPerPage"></pagination>
 		</div>
 	</div>
 </div>
