--- a/propertyRental/src/main/webapp/app/src/modules/addProperty/partials/addProperty.html
+++ b/propertyRental/src/main/webapp/app/src/modules/addProperty/partials/addProperty.html
@@ -152,7 +152,7 @@
 		  </div>
 		<div class="row">
 			<div class="pager">
-				<input type="submit" value="Add property" class="btn btn-success" ng-disabled="propertyForm.$invalid" />
+				<input type="submit" value="Add property" class="btn btn-success" ng-disabled="addPropertyButtonDisabled(propertyForm)" />
 			</div>
 		</div>
 		
